--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "timetable",
-  "version": "1.0.0",
+  "name": "unofficial_timetable_cuiatd",
+  "version": "2.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -22,8 +22,7 @@
     "react-native-element-dropdown": "^2.9.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-vector-icons": "^9.2.0",
-    "expo-sqlite": "~11.1.1"
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
