--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^9.22.1",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-action-button": "^2.8.5",
     "react-native-autocomplete-input": "^5.3.2",
     "react-native-element-dropdown": "^2.9.0",
     "react-native-safe-area-context": "4.5.0",
