SplashScreen Animated. SQLite and Redux Initialized.
The code a mess currently. Will be worked on later.

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ Config/FirebaseConfig.js
 .idea/CUI-ATD-Unofficial-Timetable.iml
 .idea/modules.xml
 .idea/vcs.xml
+Unofficial-Timetable-CUI-ATD.v2.0.apk
+BackEnd/my.secrets.json
