--- a/package.json
+++ b/package.json
@@ -11,19 +11,27 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.17.11",
-    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "expo": "~48.0.10",
+    "expo-splash-screen": "~0.18.2",
+    "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.4",
-    "firebase": "^9.22.1",
+    "lottie-react-native": "5.1.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-action-button": "^2.8.5",
     "react-native-autocomplete-input": "^5.3.2",
     "react-native-element-dropdown": "^2.9.0",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-paper": "^5.8.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
