--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "unofficial_timetable_cuiatd",
   "version": "2.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -16,10 +15,12 @@
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
-    "expo": "~48.0.10",
+    "expo": "~48.0.18",
     "expo-splash-screen": "~0.18.2",
     "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
+    "lottie-ios": "^4.2.0",
     "lottie-react-native": "5.1.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
@@ -34,7 +35,8 @@
     "react-redux": "^8.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.22.5"
   },
   "private": true
 }
