--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
+    "expo-modules-autolinking": "^0.8.1",
     "expo-splash-screen": "~0.18.2",
     "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
-    "lottie-ios": "^4.2.0",
+    "lottie-ios": "^3.4.0",
     "lottie-react-native": "5.1.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
