--- a/package.json
+++ b/package.json
@@ -16,10 +16,9 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
-    "expo-modules-autolinking": "^0.8.1",
-    "expo-splash-screen": "~0.18.2",
     "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.4",
+    "expo-system-ui": "~2.2.1",
     "expo-updates": "~0.16.4",
     "lottie-ios": "^3.4.0",
     "lottie-react-native": "5.1.4",
@@ -33,7 +32,8 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-redux": "^8.1.0"
+    "react-redux": "^8.1.0",
+    "sharp": "^0.32.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
