Revert To ReduxLess App😒

--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "Unofficial-Timetable",
-    "slug": "timetable",
-    "version": "2.0.0",
+    "name": "Unofficial_Timetable_CUI",
+    "slug": "Unofficial_Timetable_CUI",
+    "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -21,17 +21,10 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      },
-      "package": "com.njbsyd.timetable"
+      }
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    },
-    "owner": "njbsyd",
-    "extra": {
-      "eas": {
-        "projectId": "ef2b46dd-0e2f-4832-a5e5-4330ec4085e0"
-      }
     }
   }
 }
