--- a/eas.json
+++ b/eas.json
@@ -8,13 +8,11 @@
       "distribution": "internal"
     },
     "preview": {
-      "distribution": "internal"
-    },
-    "production": {
       "android": {
         "buildType": "apk"
       }
-    }
+    },
+    "production": {}
   },
   "submit": {
     "production": {}
