--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.18",
-    "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.8",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.17.11",
-    "@react-navigation/material-bottom-tabs": "^6.2.15",
-    "@react-navigation/native": "^6.1.6",
-    "@react-navigation/stack": "^6.3.16",
+    "@react-native-community/netinfo": "^9.3.7",
+    "@react-navigation/native": "^6.1.7",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "expo": "~48.0.18",
     "expo-sqlite": "~11.1.1",
+    "expo-status-bar": "~1.4.4",
     "lottie-ios": "^3.4.0",
     "lottie-react-native": "5.1.4",
+    "react": "18.2.0",
+    "react-native": "0.71.8",
     "react-native-action-button": "^2.8.5",
     "react-native-autocomplete-input": "^5.3.2",
     "react-native-element-dropdown": "^2.9.0",
@@ -30,7 +30,8 @@
     "react-native-paper": "^5.8.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
