--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "Unofficial CUI",
+    "name": "unofficial_timetable_cui",
+    "version": "3.2.0",
     "slug": "Unofficial_Timetable_CUI",
-    "version": "3.0.0",
     "owner": "njbsyd",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
