--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "unofficial_timetable_cui",
-    "version": "3.2.0",
-    "slug": "Unofficial_Timetable_CUI",
+    "name": "CUI Unofficial",
+    "version": "4.0.0",
+    "slug": "cui_unofficial",
     "owner": "njbsyd",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
