Finalizing for 3.2.0 release

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "unofficial_timetable_cui",
+  "name": "cui_unofficial",
   "version": "3.2.0",
   "author": "njbsyd",
   "main": "node_modules/expo/AppEntry.js",
