--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.18",
-    "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.8",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-community/netinfo": "^9.3.7",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "expo": "~48.0.18",
     "expo-sqlite": "~11.1.1",
+    "expo-status-bar": "~1.4.4",
+    "expo-updates": "^0.18.11",
     "lottie-ios": "^3.4.0",
     "lottie-react-native": "5.1.4",
+    "react": "18.2.0",
+    "react-native": "0.71.8",
     "react-native-action-button": "^2.8.5",
     "react-native-autocomplete-input": "^5.3.2",
     "react-native-element-dropdown": "^2.9.0",
