Removed AutoUpdate for app

--- a/eas.json
+++ b/eas.json
@@ -3,21 +3,20 @@
     "preview": {
       "android": {
         "buildType": "apk"
-      },
-      "channel": "preview"
+      }
     },
     "preview2": {
       "android": {
         "gradleCommand": ":app:assembleRelease"
-      },
-      "channel": "preview2"
+      }
     },
     "preview3": {
-      "developmentClient": true,
-      "channel": "preview3"
+      "developmentClient": true
     },
     "production": {
-      "channel": "production"
+      "android": {
+        "buildType": "apk"
+      }
     }
   }
 }
