--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-community/netinfo": "^9.3.7",
+    "@react-native-community/netinfo": "9.3.7",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
@@ -19,7 +19,6 @@
     "expo": "~48.0.18",
     "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.4",
-    "expo-updates": "^0.18.11",
     "lottie-ios": "^3.4.0",
     "lottie-react-native": "5.1.4",
     "react": "18.2.0",
