--- a/app.json
+++ b/app.json
@@ -32,6 +32,15 @@
       "eas": {
         "projectId": "f45b966a-2ad8-472a-9ba9-d266061b7883"
       }
+    },
+    "runtimeVersion": {
+      "policy": "sdkVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/f45b966a-2ad8-472a-9ba9-d266061b7883",
+      "enabled": true,
+      "fallbackToCacheTimeout": 10000,
+      "checkAutomatically": "ON_LOAD"
     }
   }
 }
