--- a/app.json
+++ b/app.json
@@ -1,14 +1,14 @@
 {
   "expo": {
     "name": "CUI Unofficial",
-    "version": "5.1.0",
+    "version": "5.1.1",
     "slug": "cui_unofficial",
     "owner": "njbsyd",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/Images/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/Images/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -20,13 +20,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/Images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
       "package": "com.njbsyd.cui.unofficial"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/Images/favicon.png"
     },
     "extra": {
       "eas": {
