--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.4.0",
     "expo": "~48.0.18",
     "expo-file-system": "~15.2.2",
+    "expo-font": "~11.1.1",
     "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
