--- a/app.json
+++ b/app.json
@@ -42,5 +42,8 @@
       "fallbackToCacheTimeout": 3000,
       "checkAutomatically": "ON_LOAD"
     }
+  },
+  "react-native-google-mobile-ads": {
+    "android_app_id": "ca-app-pub-2067708103851582~4954922863"
   }
 }
