--- a/eas.json
+++ b/eas.json
@@ -1,20 +1,12 @@
 {
   "build": {
-    "preview": {
+    "development": {
+      "developmentClient": true,
+      "distribution": "internal",
+      "channel": "development",
       "android": {
         "buildType": "apk"
-      },
-      "channel": "preview"
-    },
-    "preview2": {
-      "android": {
-        "gradleCommand": ":app:assembleRelease"
-      },
-      "channel": "preview2"
-    },
-    "preview3": {
-      "developmentClient": true,
-      "channel": "preview3"
+      }
     },
     "production": {
       "android": {
