--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "dev": "expo start --dev-client",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
@@ -19,6 +20,7 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
+    "expo-dev-client": "~2.2.1",
     "expo-file-system": "~15.2.2",
     "expo-font": "~11.1.1",
     "expo-sqlite": "~11.1.1",
@@ -32,6 +34,7 @@
     "react-native-autocomplete-input": "^5.3.2",
     "react-native-element-dropdown": "^2.9.0",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-google-mobile-ads": "^11.7.0",
     "react-native-paper": "^5.8.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
