--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,30 +11,43 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check for EXPO_TOKEN
+      - name: Check commit messages for build flag
+        id: check-commit
         run: |
-          if [ -z "${{ secrets.EXPO_TOKEN }}" ]; then
-            echo "You must provide an EXPO_TOKEN secret linked to this project's Expo account in this repo's secrets. Learn more: https://docs.expo.dev/eas-update/github-actions"
-            exit 1
+          if [[ $(git log -1 --pretty=%B) == *"--build"* ]]; then
+            echo "Build flag detected in commit message. Proceeding with the workflow."
+            echo "::set-output name=build_flag_detected::true"
+          else
+            echo "Build flag not detected in commit message. Skipping the workflow."
+            echo "::set-output name=build_flag_detected::false"
           fi
 
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - name: Conditional Workflow
+        if: steps.check-commit.outputs.build_flag_detected == 'true'
+        steps:
+          - name: Check for EXPO_TOKEN
+            run: |
+              if [ -z "${{ secrets.EXPO_TOKEN }}" ]; then
+                echo "You must provide an EXPO_TOKEN secret linked to this project's Expo account in this repo's secrets. Learn more: https://docs.expo.dev/eas-update/github-actions"
+                exit 1
+              fi
+          - name: Checkout repository
+            uses: actions/checkout@v2
 
-      - name: Setup Node
-        uses: actions/setup-node@v2
-        with:
-          node-version: 18.x
-          cache: 'yarn'
+          - name: Setup Node
+            uses: actions/setup-node@v2
+            with:
+              node-version: 18.x
+              cache: 'yarn'
 
-      - name: Setup EAS
-        uses: expo/expo-github-action@v8
-        with:
-          eas-version: latest
-          token: ${{ secrets.EXPO_TOKEN }}
+          - name: Setup EAS
+            uses: expo/expo-github-action@v8
+            with:
+              eas-version: latest
+              token: ${{ secrets.EXPO_TOKEN }}
 
-      - name: Install dependencies
-        run: yarn install
+          - name: Install dependencies
+            run: yarn install
 
-      - name: Publish update
-        run: eas build --platform android --profile production --non-interactive
+          - name: Publish update
+            run: eas build --platform android --profile production --non-interactive
