--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,30 +24,28 @@ jobs:
 
       - name: Conditional Workflow
         if: steps.check-commit.outputs.build_flag_detected == 'true'
-        steps:
-          - name: Check for EXPO_TOKEN
-            run: |
-              if [ -z "${{ secrets.EXPO_TOKEN }}" ]; then
-                echo "You must provide an EXPO_TOKEN secret linked to this project's Expo account in this repo's secrets. Learn more: https://docs.expo.dev/eas-update/github-actions"
-                exit 1
-              fi
-          - name: Checkout repository
-            uses: actions/checkout@v2
+        run: |
+          if [ -z "${{ secrets.EXPO_TOKEN }}" ]; then
+            echo "You must provide an EXPO_TOKEN secret linked to this project's Expo account in this repo's secrets. Learn more: https://docs.expo.dev/eas-update/github-actions"
+            exit 1
+          fi
 
-          - name: Setup Node
-            uses: actions/setup-node@v2
-            with:
-              node-version: 18.x
-              cache: 'yarn'
+          # Checkout repository
+          uses: actions/checkout@v2
 
-          - name: Setup EAS
-            uses: expo/expo-github-action@v8
-            with:
-              eas-version: latest
-              token: ${{ secrets.EXPO_TOKEN }}
+          # Setup Node
+          uses: actions/setup-node@v2
+          with:
+            node-version: 18.x
+            cache: 'yarn'
 
-          - name: Install dependencies
-            run: yarn install
+          # Setup EAS
+          uses: expo/expo-github-action@v8
+          with:
+            eas-version: latest
+            token: ${{ secrets.EXPO_TOKEN }}
 
-          - name: Publish update
-            run: eas build --platform android --profile production --non-interactive
+          run: yarn install
+
+          # Publish update
+          run: eas build --platform android --profile production --non-interactive
