Small Bugs Fixes

--- a/eas.json
+++ b/eas.json
@@ -18,6 +18,9 @@
       "android": {
         "buildType": "app-bundle"
       },
+      "env": {
+        "EXPO_ASSET_PROCESSING_TIMEOUT": "30"
+      },
       "autoIncrement": true,
       "channel": "production"
     }
