--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "cui_unofficial",
   "version": "1.0.0",
   "author": "njbsyd",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "dev": "expo start --dev-client",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/netinfo": "9.3.7",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -23,8 +23,10 @@
     "expo-dev-client": "~2.2.1",
     "expo-file-system": "~15.2.2",
     "expo-font": "~11.1.1",
+    "expo-splash-screen": "~0.18.2",
     "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.4",
+    "expo-system-ui": "^2.4.0",
     "expo-updates": "~0.16.4",
     "lottie-ios": "^3.4.0",
     "lottie-react-native": "5.1.4",
@@ -43,7 +45,8 @@
     "react-redux": "^8.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "sharp-cli": "^4.1.1"
   },
   "private": true
 }
