--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "CUI ATD Companion",
     "version": "6.0.0",
-    "slug": "cuiatd_companion",
+    "slug": "cui_unofficial",
     "owner": "njbsyd",
     "orientation": "portrait",
     "icon": "./assets/Images/icon.png",
@@ -12,9 +12,7 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.njbsyd.cui.unofficial"
