--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "6.0.0",
   "author": "njbsyd",
   "scripts": {
-    "start": "expo start --dev-client",
+    "start": "expo start",
     "dev": "expo start --dev-client",
+    "dev-clean": "expo start --dev-client -c",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/netinfo": "9.3.7",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -20,13 +21,14 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
+    "expo-application": "~5.1.1",
     "expo-dev-client": "~2.2.1",
     "expo-file-system": "~15.2.2",
     "expo-font": "~11.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.4",
-    "expo-system-ui": "^2.4.0",
+    "expo-system-ui": "~2.2.1",
     "expo-updates": "~0.16.4",
     "lottie-ios": "^3.4.0",
     "lottie-react-native": "5.1.4",
