--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "author": "njbsyd",
   "scripts": {
     "start": "expo start --dev-client",
-    "dev": "expo start --dev-client",
     "dev-clean": "expo start --dev-client -c",
     "android": "expo run:android",
     "ios": "expo run:ios",
@@ -12,7 +11,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/netinfo": "9.3.7",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
