--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "axios": "^1.4.0",
     "expo": "~48.0.18",
     "expo-application": "~5.1.1",
-    "expo-dev-client": "^2.4.8",
+    "expo-dev-client": "~2.2.1",
     "expo-file-system": "~15.2.2",
     "expo-font": "~11.1.1",
     "expo-splash-screen": "~0.18.2",
