--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "expo-system-ui": "~2.2.1",
+    "galio-framework": "^0.8.0",
     "lottie-ios": "^3.4.0",
     "lottie-react-native": "5.1.4",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-action-button": "^2.8.5",
