--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "CUI ATD Companion",
-    "version": "7.0.0",
+    "version": "8.0.0",
     "runtimeVersion": "3.0.0",
     "slug": "cui_unofficial",
     "owner": "njbsyd",
@@ -35,6 +35,12 @@
       "eas": {
         "projectId": "f45b966a-2ad8-472a-9ba9-d266061b7883"
       }
+    },
+    "updates": {
+      "url": "https://u.expo.dev/f45b966a-2ad8-472a-9ba9-d266061b7883",
+            "enabled": true,
+                  "checkAutomatically": "ON_ERROR_RECOVERY",
+                        "fallbackToCacheTimeout": 5000
     }
   },
   "react-native-google-mobile-ads": {
