--- a/package.json
+++ b/package.json
@@ -24,16 +24,16 @@
     "expo-dev-client": "~2.2.1",
     "expo-file-system": "~15.2.2",
     "expo-font": "~11.1.1",
-    "expo-splash-screen": "~0.18.2",
     "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "expo-system-ui": "~2.2.1",
+    "expo-updates": "~0.16.4",
     "galio-framework": "^0.8.0",
     "lottie-ios": "^3.4.0",
     "lottie-react-native": "5.1.4",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.71.13",
     "react-native-action-button": "^2.8.5",
     "react-native-autocomplete-input": "^5.3.2",
     "react-native-element-dropdown": "^2.9.0",
@@ -44,7 +44,8 @@
     "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "11.26.0",
-    "react-redux": "^8.1.1"
+    "react-redux": "^8.1.1",
+    "expo-splash-screen": "~0.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
