--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "cuiatd_companion",
-  "version": "8.0.0",
+  "version": "8.5.0",
   "author": "njbsyd",
   "scripts": {
     "start": "expo start --dev-client",
     "dev-clean": "expo start --dev-client -c",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
@@ -49,7 +50,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "eslint": "^8.53.0",
+    "eslint-config-universe": "^12.0.0",
+    "prettier": "^3.1.0",
     "sharp-cli": "^2.1.0"
   },
-  "private": true
+  "private": true,
+  "eslintConfig": {
+    "extends": "universe/native"
+  }
 }
