Update request API change and other setup for build

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "build-test": "npx expo prebuild --clean && eas build -p android --profile testing",
+    "build-prod": "npx expo prebuild --clean && eas build -p android --profile production"
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
