--- a/package.json
+++ b/package.json
@@ -9,40 +9,40 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint .",
+    "build-dev": "npx expo prebuild --clean && eas build -p android --profile development",
     "build-test": "npx expo prebuild --clean && eas build -p android --profile testing",
     "build-prod": "npx expo prebuild --clean && eas build -p android --profile production"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-native-community/netinfo": "9.3.10",
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/netinfo": "11.1.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.6.0",
-    "expo": "~49.0.0",
-    "expo-dev-client": "~2.4.12",
-    "expo-file-system": "~15.4.4",
-    "expo-font": "~11.4.0",
-    "expo-splash-screen": "~0.20.2",
-    "expo-sqlite": "~11.3.3",
-    "expo-status-bar": "~1.6.0",
-    "expo-system-ui": "~2.4.0",
-    "expo-updates": "~0.18.17",
+    "expo": "~50.0.17",
+    "expo-dev-client": "~3.3.11",
+    "expo-file-system": "~16.0.9",
+    "expo-font": "~11.10.3",
+    "expo-splash-screen": "~0.26.4",
+    "expo-sqlite": "~13.4.0",
+    "expo-status-bar": "~1.11.1",
+    "expo-system-ui": "~2.9.4",
     "lottie-ios": "^3.4.0",
-    "lottie-react-native": "5.1.6",
+    "lottie-react-native": "6.5.1",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.73.6",
     "react-native-element-dropdown": "^2.9.0",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-paper": "^5.8.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-webview": "13.2.2",
+    "react-native-webview": "13.6.4",
     "react-redux": "^8.1.1"
   },
   "devDependencies": {
