--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-sqlite": "~13.4.0",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.4",
+    "expo-updates": "~0.24.12",
     "lottie-ios": "^3.4.0",
     "lottie-react-native": "6.5.1",
     "prop-types": "^15.8.1",
