--- a/eas.json
+++ b/eas.json
@@ -5,18 +5,21 @@
       "distribution": "internal",
       "channel": "development",
       "android": {
-        "buildType": "apk","image": "latest"
+        "buildType": "apk",
+        "image": "latest"
       }
     },
     "testing": {
       "channel": "testing",
       "android": {
-        "buildType": "apk","image": "latest"
+        "buildType": "apk",
+        "image": "latest"
       }
     },
     "production": {
       "android": {
-        "buildType": "app-bundle","image": "latest"
+        "buildType": "app-bundle",
+        "image": "latest"
       },
       "autoIncrement": true,
       "channel": "production"
