--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.6.0",
     "expo": "~50.0.17",
+    "expo-build-properties": "~0.11.1",
     "expo-dev-client": "~3.3.11",
     "expo-file-system": "~16.0.9",
     "expo-font": "~11.10.3",
