--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,21 +25,18 @@ on:
 jobs:
   build:
     runs-on: ${{ github.event.inputs.os }}
-    strategy:
-      matrix:
-        node: [ 18.x ]
     steps:
       - name: 🏗 Setup repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: 🏗 Setup Node
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node }}
+          node-version: 18.x
           cache: yarn
 
       - name: 🏗 Setup Expo and EAS
-        uses: expo/expo-github-action@v7
+        uses: expo/expo-github-action@v8
         with:
           token: ${{ secrets.EXPO_TOKEN }}
           expo-version: latest
@@ -64,3 +61,9 @@ jobs:
             --output=./app-build \
             --platform=${{ github.event.inputs.platform }} \
             --profile=${{ github.event.inputs.profile }}
+
+      - name: 📦 Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+            name: app-build
+            path: /home/runner/work/CUI-ATD-Companion/CUI-ATD-Companion/app-build
